# kg-annotationv2

./: .gitignore  Dockerfile  README.md  cors.json  next.config.ts
ai-service/: Dockerfile  main.py  requirements.txt
ai-service/yolox/: onnx_predictor.py  utils.py
backend/: Cargo.toml  Dockerfile  zig-linux-x86_64-0.13.0.tar.xz
backend/.cargo/: config.toml
backend/migrations/: 001_initial.sql  002_add_datasets.sql  002_fix_bucket_names.sql  004_add_image_vector_column.sql  005_add_bbox_points_to_annotations.sql
backend/src/: main.rs
backend/src/handlers/: annotation.rs  dataset.rs  export.rs  image.rs  mod.rs
backend/src/models/: annotation.rs  dataset.rs  image.rs  mod.rs  user.rs
backend/src/utils/: json.rs
backend/zig-linux-x86_64-0.13.0/doc/: langref.html
backend/zig-linux-x86_64-0.13.0/lib/libc/include/any-windows-any/: commctrl.h
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/annotation/: AnnotationCanvas.tsx
frontend/src/components/dataset/: CreateDataset.tsx
frontend/src/components/layout/: navigation.tsx
frontend/src/components/search/: ImageSearch.tsx
frontend/src/components/ui/: button.tsx
frontend/src/config/: api.ts
frontend/src/lib/: api.ts  utils.ts
