[package]
name = "kg-annotation-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5.2", features = ["fs", "cors"] }
tower = { version = "0.4", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"
uuid = { version = "1.3", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12.5", features = ["json", "multipart", "rustls-tls"], default-features = false }
zip = "2.1.3"
aws-config = "1.5.0"
aws-sdk-s3 = "1.37.0"
lambda_http = { version = "0.11.3", default-features = false, features = ["apigw_rest"] }
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3"
image = "0.24"
validator = { version = "0.16", features = ["derive"] }

sqlx = { version = "0.7.4", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
    "json",
] }

[features]
default = []
